tests/snapshots/parser__list_literal__empty.snap
---
source: tests/parser.rs
expression: "parse(\"[]\")"
---
Ok(
    [
        Expr(
            List {
                items: [],
                span: Span {
                    start: 0,
                    end: 2,
                },
            },
        ),
    ],
)
