tests/snapshots/parser__list_literal__multiline.snap
---
source: tests/parser.rs
expression: "parse(\"[\\n  1,\\n  2,\\n]\")"
---
Ok(
    [
        Expr(
            List {
                items: [
                    Int(
                        1,
                        Span {
                            start: 4,
                            end: 5,
                        },
                    ),
                    Int(
                        2,
                        Span {
                            start: 9,
                            end: 10,
                        },
                    ),
                ],
                span: Span {
                    start: 0,
                    end: 13,
                },
            },
        ),
    ],
)
