tests/snapshots/parser__list_literal__nested.snap
---
source: tests/parser.rs
expression: "parse(\"[[1, 2], [3, 4]]\")"
---
Ok(
    [
        Expr(
            List {
                items: [
                    List {
                        items: [
                            Int(
                                1,
                                Span {
                                    start: 2,
                                    end: 3,
                                },
                            ),
                            Int(
                                2,
                                Span {
                                    start: 5,
                                    end: 6,
                                },
                            ),
                        ],
                        span: Span {
                            start: 1,
                            end: 7,
                        },
                    },
                    List {
                        items: [
                            Int(
                                3,
                                Span {
                                    start: 10,
                                    end: 11,
                                },
                            ),
                            Int(
                                4,
                                Span {
                                    start: 13,
                                    end: 14,
                                },
                            ),
                        ],
                        span: Span {
                            start: 9,
                            end: 15,
                        },
                    },
                ],
                span: Span {
                    start: 0,
                    end: 16,
                },
            },
        ),
    ],
)
