tests/snapshots/parser__list_literal__one_elem.snap
---
source: tests/parser.rs
expression: "parse(\"[1]\")"
---
Ok(
    [
        Expr(
            List {
                items: [
                    Int(
                        1,
                        Span {
                            start: 1,
                            end: 2,
                        },
                    ),
                ],
                span: Span {
                    start: 0,
                    end: 3,
                },
            },
        ),
    ],
)
