tests/snapshots/parser__list_literal__trailing_comma.snap
---
source: tests/parser.rs
expression: "parse(\"[1, 2,]\")"
---
Ok(
    [
        Expr(
            List {
                items: [
                    Int(
                        1,
                        Span {
                            start: 1,
                            end: 2,
                        },
                    ),
                    Int(
                        2,
                        Span {
                            start: 4,
                            end: 5,
                        },
                    ),
                ],
                span: Span {
                    start: 0,
                    end: 7,
                },
            },
        ),
    ],
)
