tests/snapshots/parser__list_literal__unclosed_is_error.snap
---
source: tests/parser.rs
expression: "parse(\"[1, 2\")"
---
Err(
    ParseError {
        message: "expected `,` or `]`, found Eof",
        span: Span {
            start: 5,
            end: 5,
        },
    },
)
